# optimization_related_practices

./: README.md
ceres_bundle_adjustment/: CMakeLists.txt
ceres_bundle_adjustment/src/: bal_problem.h  ceres_bundle_adjustment.cpp  snavely_reprojection_error.h
ceres_curve_fitting/: CMakeLists.txt
ceres_curve_fitting/src/: ceres_curve_fitting.cpp
g2o_bundle_adjustment/: CMakeLists.txt
g2o_bundle_adjustment/src/: bal_problem.h  g2o_bundle_adjustment.cpp
g2o_curve_fitting/: CMakeLists.txt
g2o_curve_fitting/src/: g2o_curve_fitting.cpp
